<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.gmail.eamosse.imdb.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/home_fragment">

        <action
            android:id="@+id/action_HomeFragment_to_MoviesListFragment"
            app:destination="@id/navigation_movies_list" />
    </fragment>

    <fragment
        android:id="@+id/navigation_movies_list"
        android:name="com.gmail.eamosse.imdb.ui.list_movies.ListMoviesFragment"
        android:label="@string/home_second"
        tools:layout="@layout/list_movies_fragment">
        <action
            android:id="@+id/action_MoviesListFragment_to_MovieDetailFragment"
            app:destination="@id/navigation_movie_detail" />

        <argument
            android:name="myArg"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/navigation_movie_detail"
        android:name="com.gmail.eamosse.imdb.ui.movie.MovieFragment"
        android:label="@string/movie_detail"
        tools:layout="@layout/movie_detail_fragment">
        <action
            android:id="@+id/action_MovieDetail_to_MoviesListFragment"
            app:destination="@id/navigation_movies_list" />

        <argument
            android:name="myArg"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.gmail.eamosse.imdb.ui.trending.TrendingFragment"
        android:label="@string/title_trending"
        tools:layout="@layout/trending_fragment" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.gmail.eamosse.imdb.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>